<resources>
    <string name="app_name">Parkr</string>
    <string name="address">Address</string>
    <string name="parking_type">Parking Type</string>
    <string name="type_of_carpark">Carpark Type</string>
    <string name="lots_available">Available Lots</string>
    <string name="total_lots">Total Lots</string>
    <string name="lot_type">Lot Type</string>
    <string name="night_parking">Night Parking</string>
    <string name="short_term_parking">Short Term Parking</string>
    <string name="free_parking">Free Parking</string>
    <string name="favorite">Favorite</string>
    <string name="view_details">View Details</string>
    <string name="shopping_centre">Shopping Centres Parkings</string>
    <string name="hdb">HDB Parkings</string>
    <string name="title_activity_main_map">Map</string>
    <string name="facebook_app_id">112030846227737</string>
    <string name="fb_login_protocol_scheme">fb112030846227737</string>
    <string name="view_profile">View Profile</string>
    <string name="auth_failed">Auth Failed!</string>
    <string name="route">route</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
